adjusted navbar width relative to page containers.  fixed text overflow issue on weather box.  Adjusted garment image height to prevent shifting of category and share buttons.

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -116,3 +116,6 @@ btn-accent{
     max-height: 75px;
     width: auto;
 }
+.garment-image{
+    height: 350px;
+}
